-attempted to correct homepage -align title text -fixed --- error

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -491,7 +491,7 @@ h2#post-index{
     width: 100%;
     margin-top: 0;
     margin-bottom: 0.2em;
-    font-size: 48px;
+    font-size: 35px;
     font-weight: normal;
     line-height: 1;
     letter-spacing: -1px;
@@ -558,6 +558,7 @@ a.share-button:hover {
     letter-spacing: -1px;
     /* margin: unset; */
     padding: 0em 0em 0.5em 0em;
+    text-align:center;
 }
 
 #archive h2{
